# shuffles

./: README.md  pyproject.toml
shuffles/: CardDeck.py  CustomFormatter.py  __init__.py
tests/: test_card_deck.py
